# pytest-sessions

./: README.md  pyproject.toml  tox.ini
.github/workflows/: main.yml  zizmor.yml
src/pytest_sessions/: __init__.py
tests/: test_lastfailed.py  test_newfirst.py  test_recording.py  test_reporting.py  test_reruns.py  test_sessions.py  test_stepwise.py
